--- a/styles/partials/menu3.scss
+++ b/styles/partials/menu3.scss
@@ -1,13 +1,16 @@
 /*menu3*/  
 #container-m-3{
-  height: 1600px;
+  height: auto;
 }
 
 #carte-m3 {
   font-family: 'Kalam', cursive;
   width: 90%;
-  margin: 50px auto;
+  margin: auto;
+  margin-bottom:80px;
   background-color: #e5ffff;
+  padding-top: 50px;
+  padding-bottom: 30px;
 }
 /*commun menu3*/
 .bloc {
@@ -24,7 +27,6 @@
   flex-direction: row;
   justify-content: center;
   word-break: normal;
-  margin-bottom: 60px;
 }
 /*commun menu3*/
 
@@ -158,9 +160,7 @@
 
 }
 @media screen and (max-width: 870px){
-  #container-m-3{
-    height:2150px;
-  }
+ 
   #carte-m3{
     width:100%;
     margin:0;
@@ -175,7 +175,7 @@
     padding: 20px 0;
   }
   .titre{
-    font-size:1em;
+    font-size: 1em;
   }
   .plat, .entree, .dessert{
     display:flex;
