--- a/styles/partials/layout.css
+++ b/styles/partials/layout.css
@@ -6,12 +6,12 @@
 .T-header {
   text-decoration: none;
   color: #ffd54f;
+  font-size: 1.5em;
 }
 
 .header {
   text-align: center;
   width: 100%;
-  height: 80px;
   background-color: #00796b;
   font-size: 1.3em;
   display: -webkit-box;
@@ -39,9 +39,9 @@
       -ms-flex-pack: center;
           justify-content: center;
   color: black;
-  margin: 40px auto;
   font-weight: lighter;
-  font-size: 1.2em;
+  font-size: 1em;
+  margin: 10px auto;
 }
 
 #title {
@@ -97,13 +97,13 @@
 
 .ul-m4 {
   font-size: 1.7em;
-  padding: 0 80px;
+  padding: 0 100px;
+  margin: 50px 0;
   list-style: none;
 }
 
 li {
-  vertical-align: middle;
-  padding-bottom: 8px;
+  padding-bottom: 10px;
 }
 
 .prix {
@@ -124,7 +124,8 @@ li {
       -ms-flex-pack: justify;
           justify-content: space-between;
   bottom: 0;
-  position: fixed;
+  position: -webkit-sticky;
+  position: sticky;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
