--- a/styles/partials/layout.scss
+++ b/styles/partials/layout.scss
@@ -5,11 +5,11 @@
 .T-header{
   text-decoration: none;
   color:#ffd54f;
+  font-size: 1.5em;
 }
 .header{
     text-align: center;
     width: 100%;
-    height:80px;
     background-color: #00796b;
     font-size:1.3em;
     display:flex;
@@ -24,9 +24,9 @@
     display:flex;
     justify-content: center;
     color: black;
-    margin:40px auto;
     font-weight: lighter;
-    font-size: 1.2em;
+    font-size: 1em;
+    margin: 10px auto;
   }
   #title{
     font-weight: lighter;
@@ -69,13 +69,15 @@
 
   .ul-m4{
     font-size: 1.7em;
-    padding:0 80px;
+    padding:0 100px;
+    margin: 50px 0;
+
     list-style: none;
 }
   li{
-    vertical-align: middle;
-    padding-bottom: 8px;
+    padding-bottom: 10px;
   }
+
   .prix{
     float: right;
     font-size: 0.8em;
@@ -89,7 +91,7 @@
     display:flex;
     justify-content: space-between;
     bottom: 0;
-    position: fixed; 
+    position: sticky; 
     align-items: center;
 
 }
