--- a/styles/partials/menu1.css
+++ b/styles/partials/menu1.css
@@ -1,23 +1,22 @@
 /*menu1*/
 #container-m1 {
   width: 100%;
-  height: 1650px;
+  height: auto;
 }
 
 .bloc-page-m1 {
   margin: 0;
   background-color: #fff;
-  height: 100%;
+  height: auto;
 }
 
 .carte-m1 {
   font-family: 'Neucha', cursive;
-  position: relative;
   width: 90%;
   height: auto;
   margin: auto;
+  margin-bottom: 80px;
   background-color: #ffebee;
-  -webkit-margin-bottom-collapse: separate;
 }
 
 /*haut menu1*/
@@ -45,8 +44,8 @@
           justify-content: center;
   -ms-flex-item-align: center;
       align-self: center;
-  width: 90px;
-  height: 90px;
+  width: 120px;
+  height: 120px;
 }
 
 .titrem1 {
@@ -108,6 +107,7 @@ li {
       -ms-flex-pack: center;
           justify-content: center;
   width: 100%;
+  padding-bottom: 30px;
 }
 
 .note2 {
@@ -133,7 +133,7 @@ li {
       -ms-flex-pack: center;
           justify-content: center;
   color: #4e342e;
-  font-size: 1.8em;
+  font-size: 2em;
 }
 
 /*bas menu1*/
@@ -151,7 +151,7 @@ li {
   }
   #container-m1 {
     width: 100%;
-    height: 2200px;
+    height: auto;
   }
   .prix {
     float: none;
