--- a/styles/partials/menu1.scss
+++ b/styles/partials/menu1.scss
@@ -1,21 +1,20 @@
 /*menu1*/
   #container-m1{
       width:100%;
-      height: 1650px;
+      height: auto;
   }
   .bloc-page-m1{
       margin:0;
       background-color: #fff;
-      height: 100%;
+      height: auto;
      }
      .carte-m1{
         font-family: 'Neucha', cursive;
-        position: relative;
         width: 90%;
         height: auto;
         margin: auto;
+        margin-bottom: 80px;
         background-color: #ffebee;
-        -webkit-margin-bottom-collapse: separate;
     }
      /*haut menu1*/
      .entete {
@@ -29,8 +28,8 @@
        display:flex;
        justify-content: center;
        align-self: center;
-       width: 90px;
-       height:90px;
+       width: 120px;
+       height: 120px;
      }
      .titrem1{
         font-size: 4em;
@@ -74,6 +73,7 @@
         display: inline-flex;
         justify-content: center;
         width: 100%;
+        padding-bottom:30px;
     }
      .note2{
          display: inline-flex;
@@ -88,7 +88,8 @@
          width: auto;
          justify-content: center;
          color: #4e342e;
-         font-size: 1.8em;
+         font-size: 2em;
+
      } 
       /*bas menu1*/  
 
@@ -106,7 +107,7 @@
     }
     #container-m1 {
       width: 100%;
-      height: 2200px;
+      height: auto;
     }
       .prix {
          float: none;
