--- a/styles/partials/menu4.css
+++ b/styles/partials/menu4.css
@@ -1,13 +1,14 @@
 @charset "UTF-8";
 /*menu4*/
 #container-m4 {
-  height: 1450px;
+  height: auto;
 }
 
 #carte-m4 {
   font-family: 'Rokkitt', serif;
   width: 90%;
   margin: auto;
+  margin-bottom: 80px;
 }
 
 /*titre coloré menu4*/
@@ -107,7 +108,7 @@
 /*responsive menu4*/
 @media screen and (max-width: 870px) {
   #container-m4 {
-    height: 2000px;
+    height: auto;
   }
   .gradient-m4 {
     font-size: 2em;
