--- a/styles/partials/menu1.css
+++ b/styles/partials/menu1.css
@@ -143,15 +143,13 @@ li {
     margin: auto;
     width: auto;
   }
-  .titrem1 {
-    font-size: 2em;
-  }
-  .ul-m4 {
-    margin: 0;
-  }
   #container-m1 {
     width: 100%;
+    margin: 0;
     height: auto;
+  }
+  .titrem1 {
+    font-size: 3em;
   }
   .prix {
     float: none;
@@ -182,8 +180,7 @@ li {
   }
   .carte-m1 {
     width: 100%;
-    margin: 0;
-    padding: 0;
+    margin-bottom: 20px;
   }
   .fin {
     font-size: 1.8em;
