--- a/styles/partials/layout.css
+++ b/styles/partials/layout.css
@@ -39,9 +39,9 @@
       -ms-flex-pack: center;
           justify-content: center;
   color: black;
-  font-weight: lighter;
-  font-size: 1em;
-  margin: 10px auto;
+  font-weight: bold;
+  font-size: 2em;
+  margin: 70px auto 0 auto;
 }
 
 #title {
@@ -187,8 +187,15 @@ footer {
   #title {
     width: auto;
   }
+  .titre {
+    font-size: 1em;
+    margin: 0;
+  }
   .header {
     height: auto;
+  }
+  li {
+    text-align: center;
   }
   .ul-m4 {
     height: auto;
