--- a/styles/partials/maquette.scss
+++ b/styles/partials/maquette.scss
@@ -169,8 +169,12 @@ span{
     flex-direction: column;
   }
   
+  .menu{
+    width:100%;
+    height:100%;
+  }
   .bientot{
-    width:60%;
+    width: 60%;
     font-size: 1.5em;
   }
 }
