--- a/styles/partials/mentions.css
+++ b/styles/partials/mentions.css
@@ -1,8 +1,7 @@
 /*mentions legales*/
 #bloc-page-mention {
   width: 100%;
-  height: 1100px;
-  margin: 0;
+  height: auto;
 }
 
 #container-mentions {
@@ -21,7 +20,6 @@ p {
 
 @media screen and (max-width: 870px) {
   #container-mentions {
-    height: 1200px;
     text-align: center;
   }
 }
