--- a/styles/partials/mentions.scss
+++ b/styles/partials/mentions.scss
@@ -1,8 +1,7 @@
 /*mentions legales*/
 #bloc-page-mention{
     width: 100%;
-    height: 1100px;
-    margin:0;
+    height: auto;
   }
  #container-mentions{
      height:auto;
@@ -19,7 +18,6 @@
 
  @media screen and (max-width: 870px){
     #container-mentions {
-        height: 1200px;
         text-align: center;
       }
  }
