--- a/styles/partials/menu2.css
+++ b/styles/partials/menu2.css
@@ -39,7 +39,19 @@
 
 /*englobe menu2*/
 /*titre coloré menu2*/
+.titrecouleurm2 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  width: 100%;
+}
+
 .gradient-m2 {
+  text-align: center;
   font-size: 4em;
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
@@ -233,10 +245,11 @@ li {
   #carte-m2 {
     width: 100%;
     height: auto;
+    padding-bottom: 30px;
+    margin-bottom: 30px;
   }
   .gradient-m2 {
-    margin: 0;
-    font-size: 2em;
+    font-size: 3em;
   }
   .prix {
     float: none;
