--- a/styles/partials/style.css
+++ b/styles/partials/style.css
@@ -40,9 +40,9 @@
       -ms-flex-pack: center;
           justify-content: center;
   color: black;
-  font-weight: lighter;
-  font-size: 1em;
-  margin: 10px auto;
+  font-weight: bold;
+  font-size: 2em;
+  margin: 70px auto 0 auto;
 }
 
 #title {
@@ -188,8 +188,15 @@ footer {
   #title {
     width: auto;
   }
+  .titre {
+    font-size: 1em;
+    margin: 0;
+  }
   .header {
     height: auto;
+  }
+  li {
+    text-align: center;
   }
   .ul-m4 {
     height: auto;
@@ -511,6 +518,10 @@ span {
         -ms-flex-direction: column;
             flex-direction: column;
   }
+  .menu {
+    width: 100%;
+    height: 100%;
+  }
   .bientot {
     width: 60%;
     font-size: 1.5em;
@@ -664,15 +675,13 @@ li {
     margin: auto;
     width: auto;
   }
-  .titrem1 {
-    font-size: 2em;
-  }
-  .ul-m4 {
-    margin: 0;
-  }
   #container-m1 {
     width: 100%;
+    margin: 0;
     height: auto;
+  }
+  .titrem1 {
+    font-size: 3em;
   }
   .prix {
     float: none;
@@ -703,8 +712,7 @@ li {
   }
   .carte-m1 {
     width: 100%;
-    margin: 0;
-    padding: 0;
+    margin-bottom: 20px;
   }
   .fin {
     font-size: 1.8em;
@@ -755,7 +763,19 @@ li {
 
 /*englobe menu2*/
 /*titre coloré menu2*/
+.titrecouleurm2 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  width: 100%;
+}
+
 .gradient-m2 {
+  text-align: center;
   font-size: 4em;
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
@@ -949,10 +969,11 @@ li {
   #carte-m2 {
     width: 100%;
     height: auto;
+    padding-bottom: 30px;
+    margin-bottom: 30px;
   }
   .gradient-m2 {
-    margin: 0;
-    font-size: 2em;
+    font-size: 3em;
   }
   .prix {
     float: none;
@@ -1049,13 +1070,11 @@ li {
           justify-content: center;
   margin: auto;
   width: 100%;
-}
-
-.gradient-m3 {
   position: relative;
   color: #000;
   background: #fff;
   mix-blend-mode: multiply;
+  padding-bottom: 30px;
 }
 
 .gradient-m3::before {
@@ -1198,22 +1217,9 @@ li {
 @media screen and (max-width: 870px) {
   #carte-m3 {
     width: 100%;
-    margin: 0;
     padding-bottom: 30px;
     height: auto;
-  }
-  .light-m3 {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    margin: 0px auto;
-    padding: 20px 0;
-  }
-  .titre {
-    font-size: 1em;
+    margin-bottom: 30px;
   }
   .plat, .entree, .dessert {
     display: -webkit-box;
@@ -1255,19 +1261,10 @@ li {
     margin: 0;
   }
   .gradient-m3 {
-    font-size: 2em;
+    font-size: 3em;
     margin: 30px auto;
     text-align: center;
     padding: 0;
-  }
-  .prix {
-    display: -webkit-inline-box;
-    display: -ms-inline-flexbox;
-    display: inline-flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    width: auto;
   }
 }
 
@@ -1283,6 +1280,7 @@ li {
   width: 90%;
   margin: auto;
   margin-bottom: 80px;
+  padding-top: 30px;
 }
 
 /*titre coloré menu4*/
@@ -1385,7 +1383,7 @@ li {
     height: auto;
   }
   .gradient-m4 {
-    font-size: 2em;
+    font-size: 3em;
     text-align: center;
     display: -webkit-box;
     display: -ms-flexbox;
@@ -1394,9 +1392,9 @@ li {
   }
   #carte-m4 {
     width: 100%;
-    margin: 0;
     height: auto;
     padding-bottom: 30px;
+    margin-bottom: 30px;
   }
   .block {
     -webkit-box-orient: vertical;
@@ -1404,38 +1402,10 @@ li {
         -ms-flex-direction: column;
             flex-direction: column;
   }
-  .light-m4 {
-    margin-bottom: 30px;
-  }
-  .prix {
-    float: none;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    text-align: center;
-    margin: auto;
-    margin-top: 8px;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-  }
   .title-m4 {
     width: 30%;
     margin: 0;
     text-align: center;
-  }
-  li {
-    text-align: center;
-  }
-  .separateur {
-    width: 40%;
-    height: auto;
-  }
-  .carte {
-    width: 90%;
-  }
-  section {
-    margin: 0;
   }
 }
 
@@ -1444,8 +1414,7 @@ li {
 /*mentions legales*/
 #bloc-page-mention {
   width: 100%;
-  height: 1100px;
-  margin: 0;
+  height: auto;
 }
 
 #container-mentions {
@@ -1464,7 +1433,6 @@ p {
 
 @media screen and (max-width: 870px) {
   #container-mentions {
-    height: 1200px;
     text-align: center;
   }
 }
