--- a/styles/partials/maquette.scss
+++ b/styles/partials/maquette.scss
@@ -168,10 +168,10 @@ span{
   #box1{
     flex-direction: column;
   }
-  
+
   .menu{
     width:100%;
-    height:100%;
+    height: 500px;
   }
   .bientot{
     width: 60%;
@@ -179,10 +179,4 @@ span{
   }
 }
 /*responsive index*/
-
 /*index*/
-
- 
-   
-
-  
