--- a/styles/partials/menu3.scss
+++ b/styles/partials/menu3.scss
@@ -31,7 +31,7 @@
 /*commun menu3*/
 
 
-/*haut menu3*/
+/*titre coloré menu3*/
 .gradient-m3 {
   font-size: 4em;
   display: inline-flex;
@@ -55,7 +55,25 @@
   background: linear-gradient(to right, #0d47a1, #0d47a1, #1e88e5, #64b5f6, #64b5f6);
   mix-blend-mode: screen;
 }
-/*haut menu3*/
+/*titre coloré menu3*/
+
+/*soulignement animé*/
+#traitm3:after {
+  content: '';
+  display: block;
+  bottom: 0;
+  left: 0;
+  height: 4px;
+  width: 0;
+  background: transparent;
+  transition: width .7s ease, background-color .7s ease;
+}
+#traitm3:hover:after {
+  width: 100%;
+  background: -webkit-gradient(linear, left top, right top, from(#0d47a1), color-stop(#0d47a1), color-stop(#1e88e5), color-stop(#64b5f6), to(#64b5f6));
+  background: linear-gradient(to right, #0d47a1, #0d47a1, #1e88e5, #64b5f6, #64b5f6);
+}
+/*soulignement animé*/
 
 /*separateurs menu3*/
 .btn {
@@ -166,7 +184,9 @@
     height: auto;
     margin-bottom:30px;
   }
-
+  #traitm3:after{
+    transition: none;
+  }
   .plat, .entree, .dessert{
     display:flex;
     flex-direction:column;
