--- a/styles/partials/maquette.css
+++ b/styles/partials/maquette.css
@@ -79,27 +79,6 @@ html, body {
   justify-content: space-around;
 }
 
-#box1 img:hover {
-  width: 100%;
-  /* L'image est grossie de 15% */
-  -webkit-transform: scale(1.15);
-  /* Safari et Chrome */
-  /* Firefox */
-  /* Internet Explorer 9 */
-  /* Opera */
-  transform: scale(1.15);
-  opacity: 0.6;
-}
-
-.menu {
-  width: 100%;
-  height: auto;
-  -webkit-transition: -webkit-transform .9s;
-  transition: -webkit-transform .9s;
-  transition: transform .9s;
-  transition: transform .9s, -webkit-transform .9s;
-}
-
 .menu {
   margin: 30px auto 30px auto;
   border: solid 1px #cfcfcf;
@@ -108,14 +87,26 @@ html, body {
   overflow: hidden;
 }
 
+.menu img:hover {
+  width: 100%;
+  /* L'image est grossie de 15% */
+  -webkit-transform: scale(1.15);
+  /* Safari et Chrome */
+  /* Firefox */
+  /* Internet Explorer 9 */
+  /* Opera */
+  transform: scale(1.15);
+  -webkit-transition: all 0.9s;
+  transition: all 0.9s;
+  opacity: 0.7;
+}
+
 .menu img {
   width: 100%;
   height: 100%;
 }
 
 .menu img:hover {
-  -webkit-transition: 0.9s;
-  transition: 0.9s;
   width: 100%;
   height: 700px;
 }
@@ -278,6 +269,8 @@ span {
   .menu {
     width: 100%;
     height: 500px;
+    -webkit-transform: none;
+            transform: none;
   }
   .bientot {
     width: 60%;
