--- a/styles/partials/maquette.scss
+++ b/styles/partials/maquette.scss
@@ -65,26 +65,6 @@ html,body{
   justify-content: space-around;
 }
 
-#box1 img:hover{
-  width: 100%;
-  /* L'image est grossie de 15% */
-  -webkit-transform:scale(1.15); /* Safari et Chrome */
-  -moz-transform:scale(1.15); /* Firefox */
-  -ms-transform:scale(1.15); /* Internet Explorer 9 */
-  -o-transform:scale(1.15); /* Opera */
-  transform:scale(1.15);
-  opacity: 0.6;
-}
-
-.menu{
-  width:100%;
-  height: auto;
-  -webkit-transition:-webkit-transform .9s; // Chrome Safari
-  -moz-transition:-moz-transform .9s;       // Mozilla
-  -o-transition:-o-transform .9s;           // Opéra
-  -ms-transition:-ms-transform .9s;         // IE
-  transition:transform .9s;
-}
 
 .menu {
   margin: 30px auto 30px auto;
@@ -94,12 +74,25 @@ html,body{
   overflow: hidden;
   }
 
+  .menu img:hover{
+    width: 100%;
+    /* L'image est grossie de 15% */
+    -webkit-transform:scale(1.15); /* Safari et Chrome */
+    -moz-transform:scale(1.15); /* Firefox */
+    -ms-transform:scale(1.15); /* Internet Explorer 9 */
+    -o-transform:scale(1.15); /* Opera */
+    transform:scale(1.15);
+    -moz-transition: all 0.9s;
+    -webkit-transition: all 0.9s;
+    transition: all 0.9s;
+    opacity: 0.7;
+  }
+
   .menu img {
   width:100%;
   height:100%;
   }
   .menu img:hover {
-  transition: 0.9s;
   width:100%;
   height:700px;
   }
@@ -168,10 +161,11 @@ span{
   #box1{
     flex-direction: column;
   }
-
+  
   .menu{
     width:100%;
     height: 500px;
+    transform: none;
   }
   .bientot{
     width: 60%;
