--- a/styles/partials/menu1.css
+++ b/styles/partials/menu1.css
@@ -50,7 +50,7 @@
 
 .titrem1 {
   font-size: 4em;
-  color: #4e342e;
+  color: #3e2723;
   margin: 30px 0px;
   font-weight: lighter;
 }
@@ -84,20 +84,33 @@
   margin: auto;
 }
 
-.title:before {
-  content: "";
-  left: 0;
-  right: 0;
-  height: 2px;
-  position: absolute;
-  top: calc(50% - 1px);
-}
-
 li {
   color: #424242;
 }
 
 /*listes des plats menu1*/
+/*animation soulignement des titres*/
+#traitm1:after {
+  content: '';
+  display: block;
+  bottom: 0;
+  left: 0;
+  height: 4px;
+  width: 0;
+  background: transparent;
+  -webkit-transition: width .7s ease, background-color .7s ease;
+  transition: width .7s ease, background-color .7s ease;
+}
+
+#traitm1:hover:after {
+  width: 100%;
+  background: -webkit-gradient(linear, left top, right top, from(#3e2723), color-stop(#4e342e), color-stop(#6d4c41), color-stop(#8d6e63), color-stop(#8d6e63), to(#bcaaa4));
+  background: linear-gradient(to right, #3e2723, #4e342e, #6d4c41, #8d6e63, #8d6e63, #bcaaa4);
+  -webkit-transition: width .7s ease, background-color .7s ease;
+  transition: width .7s ease, background-color .7s ease;
+}
+
+/*animation soulignement des titres*/
 /*bas menu1*/
 .bas-m1 {
   display: -webkit-inline-box;
@@ -150,6 +163,10 @@ li {
   }
   .titrem1 {
     font-size: 3em;
+  }
+  #traitm1:after {
+    -webkit-transition: none;
+    transition: none;
   }
   .prix {
     float: none;
