--- a/styles/partials/menu1.scss
+++ b/styles/partials/menu1.scss
@@ -33,7 +33,7 @@
      }
      .titrem1{
         font-size: 4em;
-        color: #4e342e;
+        color: #3e2723;
         margin: 30px 0px;
         font-weight: lighter;
     }
@@ -48,6 +48,7 @@
         width: 100%;
         vertical-align: middle;
     }
+
     .separateur-m1{
         width: 33%;
         display: flex;
@@ -55,18 +56,30 @@
         height: 70px;
         margin: auto;
     }
-    .title:before {
-        content: "";
-        left: 0;
-        right: 0;
-        height: 2px;
-        position: absolute;
-        top: calc(50% - 1px);
-    }
+
     li{
         color:#424242;
         }
     /*listes des plats menu1*/
+
+    /*animation soulignement des titres*/
+ #traitm1:after {
+    content: '';
+    display: block;
+    bottom: 0;
+    left: 0;
+    height: 4px;
+    width: 0;
+    background: transparent;
+    transition: width .7s ease, background-color .7s ease;
+}
+ #traitm1:hover:after {
+    width: 100%;
+    background: -webkit-gradient(linear, left top, right top, from(#3e2723), color-stop(#4e342e), color-stop(#6d4c41), color-stop(#8d6e63), to(#bcaaa4));
+    background: linear-gradient(to right, #3e2723, #4e342e, #6d4c41, #8d6e63, #8d6e63, #bcaaa4);
+    transition: width .7s ease, background-color .7s ease;
+}
+    /*animation soulignement des titres*/
 
     /*bas menu1*/
     .bas-m1{
@@ -107,6 +120,9 @@
     }
     .titrem1{
         font-size: 3em;
+    }
+    #traitm1:after{
+        transition: none;
     }
       .prix {
          float: none;
