--- a/styles/partials/menu4.css
+++ b/styles/partials/menu4.css
@@ -38,6 +38,26 @@
 }
 
 /*titre coloré menu4*/
+/*soulignement animé*/
+#traitm4:after {
+  content: '';
+  display: block;
+  bottom: 0;
+  left: 0;
+  height: 4px;
+  width: 0;
+  background: transparent;
+  -webkit-transition: width .7s ease, background-color .7s ease;
+  transition: width .7s ease, background-color .7s ease;
+}
+
+#traitm4:hover:after {
+  width: 100%;
+  background: -webkit-gradient(linear, left top, right top, from(#2e7d32), color-stop(#81c784), color-stop(#98ee99), to(#98ee99));
+  background: linear-gradient(to right, #2e7d32, #81c784, #98ee99, #98ee99);
+}
+
+/*soulignement animé*/
 /*commun menu4*/
 .englobe-m4 {
   display: -webkit-box;
@@ -118,6 +138,10 @@
     display: -ms-flexbox;
     display: flex;
     position: relative;
+  }
+  #traitm4:after {
+    -webkit-transition: none;
+    transition: none;
   }
   #carte-m4 {
     width: 100%;
