--- a/styles/partials/menu4.scss
+++ b/styles/partials/menu4.scss
@@ -30,6 +30,24 @@
     }
     /*titre coloré menu4*/
 
+    /*soulignement animé*/
+#traitm4:after {
+    content: '';
+    display: block;
+    bottom: 0;
+    left: 0;
+    height: 4px;
+    width: 0;
+    background: transparent;
+    transition: width .7s ease, background-color .7s ease;
+  }
+  #traitm4:hover:after {
+    width: 100%;
+    background: -webkit-gradient(linear, left top, right top, from( #2e7d32), color-stop(#66bb6a), color-stop(#66bb6a), color-stop(#81c784), to(#76d275));
+    background: linear-gradient(to right, #2e7d32, #81c784, #98ee99, #98ee99);
+  }
+  /*soulignement animé*/
+
     /*commun menu4*/
     .englobe-m4{
         display: flex;
@@ -90,6 +108,10 @@
        display: flex;
        position: relative;
       
+    }
+    
+    #traitm4:after{
+        transition: none;
     }
 
     #carte-m4{
